# liquidation-anticipation-bot

./: .env.example  .gitignore  README.md  extratos_resultado.json  pyproject.toml
auth/: paramenters.yml  parameters_homologacao.yml
src/: config.py  main.py  test_db.py  test_extrato.py
src/api/: client.py
src/rpa/: Wba.py  runner.py
src/services/: database.py  desagio.py  teams.py
src/utils/: extrair_extratos.py  send_message_teams.py  wba_helpers.py
